# sword

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  mw_migration.md  rustfmt.toml
crates/sword/: Cargo.toml
crates/sword-core/: Cargo.toml
crates/sword-core/src/: application.rs  config.rs  controllers.rs  interceptor.rs  lib.rs  module.rs  shutdown.rs
crates/sword-core/src/error/: diagnostic.rs
crates/sword-core/src/injectables/: container.rs
crates/sword-grpc/: Cargo.toml
crates/sword-grpc/src/: application.rs  config.rs  controller.rs  interceptor.rs  lib.rs  registry.rs  response.rs
crates/sword-layers/: Cargo.toml
crates/sword-layers/src/: compression.rs  helmet.rs  lib.rs  not_found.rs  request_id.rs  timeout.rs
crates/sword-layers/src/body_limit/: grpc.rs  web.rs
crates/sword-layers/src/tracing/: config.rs  dev.rs  mod.rs  time.rs
crates/sword-macros/: Cargo.toml
crates/sword-macros/src/: interceptor_derive.rs  lib.rs
crates/sword-macros/src/controllers/: mod.rs
crates/sword-macros/src/core/: mod.rs
crates/sword-macros/src/errors/: mod.rs
crates/sword-macros/src/interceptor/: parse.rs
crates/sword-macros/src/shared/: parsing.rs
crates/sword-socketio/: Cargo.toml
crates/sword-socketio/src/: config.rs  controller.rs  extract.rs  integration.rs  interceptor.rs  lib.rs
crates/sword-web/: Cargo.toml
crates/sword-web/src/: application.rs  config.rs  controller.rs  interceptor.rs  lib.rs  response.rs  router.rs
crates/sword-web/src/request/: extract.rs  mod.rs  parts.rs  validator.rs
crates/sword/src/: lib.rs  module.rs  prelude.rs
crates/sword/src/application/: builder.rs  config.rs  mod.rs
examples/grpc-controllers/: Cargo.toml  README.md  build.rs
examples/grpc-controllers/config/: config.toml
examples/grpc-controllers/config/proto/: users.proto
examples/grpc-controllers/src/shared/: database.rs  errors.rs  hasher.rs  interceptor.rs
examples/grpc-controllers/src/users/: controller.rs  dtos.rs  entity.rs  mod.rs  repository.rs
examples/interceptors/: Cargo.toml  Config.toml  README.md
examples/interceptors/client/: index.html
examples/interceptors/client/src/: main.js
examples/interceptors/src/: interceptors.rs  main.rs
examples/interceptors/src/adapters/: http.rs  rest.rs  socketio.rs
examples/interceptors/src/controllers/: socketio.rs  web.rs
examples/socketio-adapter/: Cargo.toml  Config.toml  README.md
examples/socketio-adapter/client/: README.md  index.html  package.json
examples/socketio-adapter/client/src/: App.svelte
examples/socketio-adapter/src/: database.rs  main.rs
examples/socketio-controllers/: Cargo.toml  Config.toml  README.md
examples/socketio-controllers/client/: package-lock.json
examples/socketio-controllers/src/: main.rs
examples/socketio-server/: .env  Cargo.toml  compose.yaml
examples/socketio-server/config/: config.toml
examples/socketio-server/src/: database.rs  main.rs
examples/users-managment/: .env  Cargo.toml
examples/users-managment/config/: config.toml
examples/users-managment/src/: main.rs
examples/users-managment/static/: 404.html  index.html
examples/users-managment/test-socketio/: main.ts  package-lock.json  package.json
examples/web-controllers/: Cargo.toml  README.md
examples/web-controllers/config/: config.toml
sword/: Cargo.toml
sword-core/: Cargo.toml
sword-core/src/: config.rs  error.rs  lib.rs
sword-core/src/config/: env.rs  mod.rs  registrar.rs  utils.rs
sword-core/src/error/: macros.rs
sword-core/src/injectables/: components.rs  container.rs  error.rs  mod.rs  providers.rs
sword-core/src/layers/: builtin.rs  mod.rs  stack.rs
sword-core/src/state/: mod.rs  traits.rs
sword-layers/: Cargo.toml
sword-layers/src/: body_limit.rs  compression.rs  cors.rs  grpc_body_limit.rs  helmet.rs  layer_stack.rs  lib.rs  not_found.rs  prelude.rs  request_id.rs  servedir.rs  timeout.rs
sword-layers/src/tracing/: config.rs  dev.rs  mod.rs  time.rs
sword-macros/: Cargo.toml
sword-macros/src/: config.rs  interceptor_derive.rs  lib.rs  macros.rs
sword-macros/src/adapters/: mod.rs
sword-macros/src/common/: context.rs  generation.rs  mod.rs
sword-macros/src/controller/: expand.rs  generation.rs  mod.rs  model.rs  parse.rs
sword-macros/src/controllers/: mod.rs
sword-macros/src/core/: config.rs
sword-macros/src/errors/: mod.rs
sword-macros/src/http_error/: mod.rs  parse.rs
sword-macros/src/injectable/: expand.rs  generation.rs  mod.rs  parse.rs
sword-macros/src/interceptor/: derive.rs  mod.rs  model.rs  parse.rs
sword-macros/src/middlewares/: mod.rs
sword-macros/src/shared/: cmeta.rs  generation.rs  mod.rs  traits.rs
sword-macros/src/socketio/: expand.rs  generation.rs  mod.rs
sword-macros/src/websocket/: mod.rs  parsing.rs
sword-tests/: Cargo.toml
sword-tests/config/: config.toml
sword-tests/src/: lib.rs
sword-tests/src/application/: config.rs  di.rs  versioning.rs
sword-tests/src/cors/: mod.rs
sword-tests/src/middlewares/: built_in.rs  controller_level.rs  cors_socketio.rs  handler_level.rs  helmet.rs  socketio_configured.rs
sword-tests/src/request/: cookies.rs  extractors.rs  multipart.rs  query.rs  stream.rs
sword/docs/: application.md
sword/src/: interceptor.rs  lib.rs  module.rs  prelude.rs
sword/src/adapters/: mod.rs
sword/src/application/: builder.rs  config.rs  mod.rs  router.rs
sword/src/controllers/: mod.rs
sword/src/core/: build.rs  di.rs  mod.rs
sword/src/errors/: mappers.rs  mod.rs
sword/src/interceptor/: mod.rs
sword/src/interceptors/: mod.rs
sword/src/module/: mod.rs
sword/src/web/: controller.rs  mod.rs  socketio.rs
tests/sword-grpc/: Cargo.toml  build.rs
tests/sword-grpc/config/: config.toml
tests/sword-grpc/src/: errors.rs  interceptors.rs  lib.rs  users.rs
tests/sword-socketio/: Cargo.toml
tests/sword-socketio/config/: config.toml
tests/sword-socketio/src/: cors.rs  lib.rs
tests/sword-web/: Cargo.toml  Config.toml
tests/sword-web/src/: errors.rs  http_methods.rs  lib.rs
(+317 files in other folders)
