[workspace]
resolver = "2"
members = ["sword", "sword-core", "sword-layers", "sword-macros", "sword-tests", "examples/*"]
default-members = ["sword", "sword-core", "sword-layers", "sword-macros", "sword-tests"]

[workspace.package]
edition = "2024"
repository = "https://github.com/sword-web/sword"
homepage = "https://github.com/sword-web/sword"
rust-version = "1.85"

[workspace.dependencies]
sword = { path = "sword" }
sword-core = { path = "sword-core", version = "0.2.1" }
sword-macros = { path = "sword-macros", version = "0.2.1", default-features = false }
sword-layers = { path = "sword-layers", version = "0.1.6" }
axum_responses = { version = "0.5.5" }

tokio = { version = "^1.0", features = ["full"] }
axum = "0.8.7"
tower = "0.5.2"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex-lite = "0.1.7"

thiserror = "2.0.17"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }

socketioxide = "0.18.0"
socketioxide-core = "0.17.0"
socketioxide-parser-common = "0.17.0"
socketioxide-parser-msgpack = "0.17.0"

inventory = "0.3.21"
parking_lot = "0.12.5"

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

bytes = "1.10.1"
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.2"
mime = "0.3.17"

thisconfig = { version = "0.2.2", features = ["byte-unit", "time-unit"] }
console = "0.15.8"
futures-lite = "2.6"
subsecond = "0.7.2"
dioxus-devtools = { version = "0.7.2", features = ["serve"] }

tower-http = "0.6.6"
axum-test = "17.3.0"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
dotenv = "0.15.0"
bcrypt = "0.17.1"
chrono = "0.4.42"
