[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*",
    "tests/sword-web",
    "tests/sword-socketio",
    "tests/sword-grpc",
]

[workspace.metadata.cargo-machete]
ignored  = ["prost",  "tonic-prost"]

[workspace.package]
version = "0.2.2"
edition = "2024"
repository = "https://github.com/sword-web/sword"
homepage = "https://github.com/sword-web/sword"
rust-version = "1.85"

[workspace.dependencies]
sword = { path = "crates/sword", default-features = false }
sword-core = { path = "crates/sword-core", version = "0.2.1" }
sword-macros = { path = "crates/sword-macros", version = "0.2.1" }
sword-layers = { path = "crates/sword-layers", version = "0.2.2" }

sword-web = { path = "crates/sword-web" }
sword-grpc = { path = "crates/sword-grpc" }
sword-socketio = { path = "crates/sword-socketio" }

tokio = { version = "^1.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-async-interceptor = "0.14.1"
tonic-health = "0.14.2"
tonic-reflection = "0.14.2"
serde = { version = "1.0.219", features = ["derive"] }

axum = "0.8.7"
axum_responses = "0.5.5"
tower = "0.5.2"
http = "1.2.0"

serde_json = "1.0.140"
regex-lite = "0.1.7"

thiserror = "2.0.17"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "chrono"] }

inventory = "0.3.21"
parking_lot = "0.12.5"

bon = "3.9.1"
bytes = "1.10.1"
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.2"
mime = "0.3.17"

thisconfig = { version = "0.2.2", features = ["byte-unit", "time-unit"] }
console = "0.15.8"
futures-lite = "2.6"
subsecond = "0.7.2"
dioxus-devtools = { version = "0.7.2", features = ["serve"] }

tower-http = "0.6.6"
axum-test = "17.3.0"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
dotenv = "0.15.0"
bcrypt = "0.17.1"
chrono = "0.4.42"
