[package]
name = "sword-core"
version = "0.2.1"
edition.workspace = true
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "Structured web framework built on top of tokio ecosystem, providing powerful features for building robust web applications."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sword"
keywords = ["sword", "web", "framework", "axum", "microservices"]
categories = ["web-programming", "web-programming::http-server"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum = { workspace = true }
axum_responses = { workspace = true }
tower = { workspace = true }

sword-layers = { workspace = true }
sword-macros = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

inventory = { workspace = true }
parking_lot = { workspace = true }
thisconfig = { workspace = true }

[features]
default = []
