[package]
name = "sword-layers"
version = "0.1.6"
edition = "2024"
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "Tower layers for the Sword web framework"
repository = "https://github.com/sword-web/sword-layers"
homepage = "https://github.com/sword-web"
documentation = "https://docs.rs/sword-layers"
keywords = ["sword", "web", "framework", "axum", "tower"]
categories = ["web-programming", "web-programming::http-server"]
readme = "../README.md"
license = "MIT"

[features]
default = [
    "body-limit",
    "not-found",
    "req-timeout",
    "request-id",
    "tracing",
]
body-limit = [
    "dep:axum",
    "dep:axum_responses",
    "dep:byte-unit",
    "dep:tracing",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-layer",
    "tower-http/limit",
]
compression = ["dep:tower-http", "dep:tracing", "tower-http/compression-full"]
cookies = ["dep:tower-cookies"]
cors = ["dep:axum", "dep:tower-http", "dep:tracing", "tower-http/cors"]
helmet = ["dep:axum-helmet"]
not-found = ["dep:axum", "dep:axum_responses", "dep:tower", "dep:tower-layer"]
req-timeout = [
    "dep:axum",
    "dep:axum_responses",
    "dep:tracing",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-layer",
    "tower-http/timeout",
]
request-id = [
    "dep:tower",
    "dep:tower-http",
    "dep:tower-layer",
    "dep:uuid",
    "tower-http/request-id",
]
servedir = ["dep:tower-http", "dep:tracing", "tower-http/fs"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
axum = { version = "0.8.7", optional = true }
axum-helmet = { version = "0.2.0", optional = true }
axum_responses = { version = "0.5.4", optional = true }
byte-unit = { version = "5.2.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thisconfig = { version = "0.2.1", features = ["byte-unit", "time-unit"] }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"], optional = true }

tower = { version = "0.5.2", optional = true }
tower-cookies = { version = "0.11.0", features = ["private", "signed"], optional = true }
tower-http = { version = "0.6.8", optional = true }
tower-layer = { version = "0.3.3", optional = true }

uuid = { version = "1.19.0", features = ["v4"], optional = true }
