[package]
name = "sword-macros"
version = "0.2.1"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "Structured Rust web framework built on top of Axum, providing powerful features for building robust web applications."
repository = "https://github.com/sword-web/sword"
homepage = "https://github.com/sword-web/sword"
documentation = "https://docs.rs/sword-macros"
keywords = ["web", "framework", "axum", "http", "async"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
axum = { workspace = true }
regex-lite = { workspace = true }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0.4"

[features]
default = []
hot-reload = []
adapter-socketio = []
