[package]
name = "sword-macros"
version = "0.2.1"
edition.workspace = true
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "Structured web framework built on top of tokio ecosystem, providing powerful features for building robust web applications."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sword-macros"
keywords = ["web", "framework", "axum", "http", "async"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
axum = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
default = ["adapter-http-controllers"]
adapter-http-controllers = []
hot-reload = []
adapter-socketio = []
