[package]
name = "sword-tests"
version = "0.1.3"
edition = "2024"

publish = false

[dependencies]
axum-test = "17.3.0"

sword = { path = "../sword", features = ["multipart", "cookies", "validator"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }

validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"

tower-http = { workspace = true, features = ["cors", "timeout"] }
