[package]
name = "sword-tests"
version = "0.1.3"
edition = "2024"

publish = false

[dependencies]
sword = { path = "../sword", features = [
    "multipart",
    "validation-validator",
    "adapter-socketio",
] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

axum-test = "17.3.0"
tower-http = { version = "0.6.6", features = ["limit", "cors", "trace"] }
