[package]
name = "sword-tests"
version = "0.1.3"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
sword = { workspace = true, features = [
    "multipart",
    "validation-validator",
    "adapter-socketio",
] }

sword-layers = { workspace = true, features = ["helmet"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

axum-test = { workspace = true }
tower-http = { workspace = true, features = ["limit", "cors", "trace"] }
