[package]
name = "sword"
version = "0.2.1"
edition = "2024"
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "Structured Rust web framework built on top of Axum, providing powerful features for building robust web applications."
repository = "https://github.com/sword-web/sword"
homepage = "https://github.com/sword-web/sword"
documentation = "https://docs.rs/sword"
keywords = ["sword", "web", "framework", "axum", "microservices"]
categories = ["web-programming", "web-programming::http-server"]
readme = "../readme.md"
license-file = "../license"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum_responses = { workspace = true }

sword-core = { workspace = true }
sword-layers = { workspace = true }
sword-macros = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

serde_urlencoded = "0.7.1"
form_urlencoded = "^1.1.0"
serde_path_to_error = "0.1.17"
mime = "0.3.17"
bytes = "1.10.1"
http-body-util = "0.1.3"

validator = { workspace = true, optional = true }

socketioxide-core = { version = "0.17.0", optional = true }
socketioxide = { version = "0.18.0", optional = true, features = [
    "extensions",
    "msgpack",
] }

tower = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }

colored = "3.0.0"
console = "0.15.8"
futures = "0.3.31"

subsecond = { version = "0.7.2", optional = true }
dioxus-devtools = { version = "0.7.2", features = ["serve"], optional = true }

[features]
default = ["validation-validator"]

multipart = ["axum/multipart", "axum_responses/multipart"]
validation-validator = ["dep:validator"]
adapter-socketio = [
    "sword-macros/adapter-socketio",
    "dep:socketioxide",
    "dep:socketioxide-core",
]
hot-reload = ["dep:subsecond", "dep:dioxus-devtools", "sword-macros/hot-reload"]
