[package]
name = "sword"
version = "0.2.1"
edition.workspace = true
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "Structured web framework built on top of tokio ecosystem, providing powerful features for building robust web applications."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sword"
keywords = ["sword", "web", "framework", "axum", "microservices"]
categories = ["web-programming", "web-programming::http-server"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum_responses = { workspace = true }

sword-core = { workspace = true }
sword-layers = { workspace = true }
sword-macros = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

serde_urlencoded = { workspace = true }
form_urlencoded = { workspace = true }
mime = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }

validator = { workspace = true, optional = true }

socketioxide-core = { workspace = true, optional = true }
socketioxide = { workspace = true, optional = true, features = [
    "extensions",
    "msgpack",
] }
socketioxide-parser-common = { workspace = true, optional = true }
socketioxide-parser-msgpack = { workspace = true, optional = true }

tower = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }

console = { workspace = true }
futures-lite = { workspace = true }

subsecond = { workspace = true, optional = true }
dioxus-devtools = { workspace = true, optional = true }

[features]
default = ["runtime-web", "web-adapter-controllers"]

runtime-web = []
runtime-grpc = []
runtime-pubsub = []

multipart = ["axum/multipart", "axum_responses/multipart"]
validation-validator = ["dep:validator"]
web-adapter-socketio = [
    "runtime-web",
    "sword-macros/web-adapter-socketio",
    "dep:socketioxide",
    "dep:socketioxide-core",
    "dep:socketioxide-parser-common",
    "dep:socketioxide-parser-msgpack",
]
web-adapter-controllers = ["runtime-web", "sword-macros/web-adapter-controllers"]
hot-reload = ["dep:subsecond", "dep:dioxus-devtools", "sword-macros/hot-reload"]
