[package]
name = "sword-grpc"
version.workspace = true
edition.workspace = true
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "gRPC controllers and runtime for the Sword framework"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sword"
keywords = ["sword", "grpc", "framework", "tonic", "rpc"]
categories = ["web-programming", "web-programming::http-server"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-async-interceptor = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true, optional = true }
tokio-stream = { workspace = true }
serde = { workspace = true }

sword-core = { workspace = true }
sword-layers = { workspace = true, features = ["tracing", "body-limit"] }
sword-macros = { workspace = true, features = ["grpc-controllers"] }

tracing = { workspace = true }
inventory = { workspace = true }

[features]
default = []
reflection = ["dep:tonic-reflection", "sword-macros/grpc-reflection"]
