[package]
name = "grpc-controllers"
version = "0.1.0"
edition.workspace = true

[dependencies]
sword = { path = "../../sword", default-features = false, features = ["grpc-controllers"] }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = "0.14.1"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-stream = "0.3.6"

[build-dependencies]
tonic-prost-build = "0.14.2"
