[package]
name = "socketio-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
sword = { workspace = true, features = [
    "validation-validator",
    "adapter-socketio",
] }

uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = "0.4.42"
