[package]
name = "socketio-controllers-example"
version = "0.1.0"
edition = "2024"

[dependencies]
sword = { workspace = true, features = ["socketio", "validation-validator"] }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
