[package]
name = "users-managment"
version = "0.1.0"
edition = "2021"

[dependencies]
sword = { workspace = true, features = ["validator"] }
serde = { workspace = true }
validator = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
dotenv = "0.15.0"
bcrypt = "0.17.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
