[package]
name = "web-controllers-example"
version = "0.1.0"
edition = "2024"

[dependencies]
sword = { workspace = true, features = ["web", "validation-validator"] }
serde = { workspace = true }
validator = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
bcrypt = { workspace = true }
