[package]
name = "sword-grpc-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
sword = { workspace = true, features = ["grpc-controllers"] }
sword-grpc = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
tonic-prost = { workspace = true }
prost = "0.14.1"
serial_test = "3.2.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
