[package]
name = "sword-grpc-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
sword = { workspace = true, features = ["grpc", "grpc-reflection"] }
sword-grpc = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
tonic-prost = { workspace = true }
prost = "0.14.1"
serial_test = "3.2.0"
thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
